# head: <feat>(<NSBundle>): <add load resouce bundle>
# - type: feat, fix, docs, style, refactor, test, chore
# - scope: can be empty (eg. if the change is a global or difficult to assign to a single component)
# - subject: start with verb (such as 'change'), 50-character line
#
# body: 72-character wrapped. This should answer:
# * Why was this change necessary?
# * How does it address the problem?
# * Are there any side effects?
#
# footer:
# - Include a link to the ticket, if any.
# - BREAKING CHANGE
#

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,16 @@
-use_frameworks!
+install! 'cocoapods',
+:generate_multiple_pod_projects => true,
+:incremental_installation => true,
+:share_schemes_for_development_pods => true
 
-platform :ios, '8.0'
+use_frameworks! :linkage => :static
+
+use_modular_headers!
+
+platform :ios, '9.0'
 
 target 'RBSToolkit_Example' do
-  pod 'RBSToolkit', :path => '../'
+  pod 'RBSToolkit', :path => '../', :shared => true
 
   target 'RBSToolkit_Tests' do
     inherit! :search_paths
